fix the upload file section alignment UI issue fix search blue border when selected UI issue

--- a/client-side/src/app/addon/addon.component.scss
+++ b/client-side/src/app/addon/addon.component.scss
@@ -15,6 +15,9 @@
         .left-container{
             align-items: center !important;
         }
+        .right-container{
+            padding: ngx-variables.$spacing-xs 0;
+        }
         .pep-button{
             height: 1.75rem !important;
         }
@@ -150,10 +153,28 @@
                     }
 
                     .url-section{
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: end;
 
+                        span{
+                            display: block;
+                            clear: left;
+                        }
+        
+                        .url-inner-div{
+                            height: 6rem;
+                            display: flex;
+                            justify-content: space-between;
+                            flex-direction: column;
+                            margin-top: 0.5rem;
+        
+                            pep-textbox{
+                                height: 2.5rem;
+                            }
+                            
+                            ::ng-deep pep-field-title{
+                                display: none !important;
+                            }
+                        }
+        
                         .validationMsg{
                             background: rgb(230, 38, 0);
                             border-radius: 0 0 4px 4px;
@@ -162,6 +183,7 @@
                             line-height: 1.5rem;
                         }
                     }
+        
                 
                 }
 
